# millenium-falcon-challenge

./: .gitignore  README.md  docker-compose.yml  test.http
api/: Dockerfile  pyproject.toml
api/src/: api.py  service.py
api/src/utils/: path_util.py
calculator/: main.py  pyproject.toml
calculator/src/calculator/business/: navigation.py  routes.py
calculator/src/calculator/models/: bounty_hunter.py  empire.py  falcon.py
calculator/tests/business/: test_navigation.py
cli/: millennium-falcon.py  pyproject.toml
front/: index.css  index.html
vanilla/: index.html  index.js
